objects/Goal__c.object
<CustomObject>
    <description>Goal is created from Strategic Plan, can not be created by Goal Tab. so Goal Tab is not available to all users.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Description__c</fullName>
        <label>Goal Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <description>Long Term
Short Term</description>
        <label>Goal Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Accomplished</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Plan_URL__c</fullName>
        <formula>HYPERLINK(&quot;apex/NewStrategicPlanLayout?id=&quot;&amp; Strategic_Plan__r.Id ,  Strategic_Plan__r.Name,&apos;_self&apos;)</formula>
        <label>Strategic Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Strategic_Plan__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>New_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Goal</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Goal#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>